# Market-Calibration-Agent

./: .gitignore  PRD1 - Polymarket Market Calibration Agent.md  PRD2 — TSFM Runner (via tollama).md  README.md  pyproject.toml
.openclaw-plans/: 01-requirements.md  02-architecture.md  03-roadmap.md  04-qa-ops.md  PRD12_GAP_MATRIX.md  PRD2_IMPLEMENTATION_REPORT.md  PRD2_LOADTEST_SPEC.md  PRD2_PERF_BLUEPRINT.md  PRD2_STAGE_PLAN.md  PRD2_TOLLAMA_HARDENING.md
agents/: __init__.py  alert_agent.py  explain_agent.py  explain_validator.py  label_resolver.py  question_quality_agent.py
api/: __init__.py  app.py  dependencies.py  schemas.py  xai_schemas.py
calibration/: __init__.py  conformal.py  conformal_state.py  drift.py  explainability.py  interval_metrics.py  labeling.py  metrics.py  trust_components.py  trust_intelligence_adapter.py  trust_score.py  xai_integration.py
configs/: alerts.yaml  default.yaml  kpi_contract_thresholds.json  logging.yaml  market_template_to_symbol_map.yaml  models.yaml  tsfm_models.yaml  tsfm_runtime.yaml
connectors/: __init__.py  base.py  factory.py  kalshi.py  kalshi_normalizer.py  manifold.py  manifold_normalizer.py  normalizers.py  polymarket_gamma.py  polymarket_subgraph.py  polymarket_ws.py
demo/: live_demo_app.py  live_demo_kpi_overlay.py
docs/: SINGLE_APP_ARCHITECTURE.md  architecture-overview.md  conformal-ops.md  dependency-lockfile-strategy.md  implementation-details.md  label-resolver-defaults.md  multi-platform-expansion.md  prd1-defaults.md  prd1-implementation-status.md  prd2-implementation-status.md  technology-stack.md  (+1 more)
features/: __init__.py  (+5 more)
(+318 files in other folders)
