[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "market-calibration-agent"
version = "0.1.0"
description = "Market calibration agent for prediction markets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "pydantic",
  "pandas",
  "numpy",
  "pyarrow",
  "httpx",
  "websockets",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
