[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "market-calibration-agent"
version = "0.1.0"
description = "Market calibration agent for prediction markets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<0.112",
  "pydantic>=2.7,<3",
  "pandas>=2.1,<2.3",
  "numpy>=1.26,<2",
  "pyarrow>=14,<16",
  "httpx>=0.27,<0.28",
  "websockets>=12,<13",
  "pyyaml>=6,<7",
]

[project.optional-dependencies]
server = [
  "uvicorn[standard]>=0.30,<0.31",
]
demo = [
  "streamlit>=1.36,<2",
]
test = [
  "pytest>=8.1,<9",
]
dev = [
  "pytest>=8.1,<9",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "agents*",
  "api*",
  "calibration*",
  "connectors*",
  "features*",
  "llm*",
  "pipelines*",
  "registry*",
  "reports*",
  "runners*",
  "schemas*",
  "storage*",
]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
